<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.vgt.luckypets.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#92736F"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="42dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:contentDescription="@string/logo_2"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/EditText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_view_1"
            android:drawableStart="@drawable/baseline_email"
            android:drawablePadding="15dp"
            android:fontFamily="@font/merriweather_bold"
            android:hint="@string/email_hint"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="#91736F"
            android:textColorHint="#91736F"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditText_Contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_view_1"
            android:drawableStart="@drawable/baseline_password"
            android:drawablePadding="15dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:fontFamily="@font/merriweather_bold"
            android:textColorHint="#91736F"
            android:textColor="#91736F"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <CheckBox
                android:id="@+id/checkBoxRecordarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:buttonTint="@color/background"
                android:minHeight="48dp"
                android:text="@string/remember_me"
                android:textColor="#DAC9C7"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewOlvideContr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password"
                android:textColor="#DBCAC8"
                android:textSize="16sp"
                android:paddingTop="12dp"
                android:textStyle="bold" />
        </RelativeLayout>


        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/background_view_1"
            android:backgroundTint="#DCCBC9"
            android:text="@string/login_button"
            android:fontFamily="@font/merriweather_bold"
            android:textColor="#91736F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/merriweather_bold"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#DBCAC8"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>
